# fa_yt

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml  query.sql  requirements.txt
alembic/: env.py
alembic/versions/: 2026_02_05_1037-2f3d30137dd8_add_product_table.py  2026_02_05_1059-2bf90fbab1e0_add_user_table.py  2026_02_05_1111-f14a33634b59_add_post_table.py  2026_02_05_1152-6de4e451d377_create_profile_table.py  2026_02_09_1546-b86d3d57df85_create_table_order.py  2026_02_09_1610-61dfe7c95dee_create_secondary_table.py  2026_02_11_1140-0102435c7c64_add_column_to_secondary_table.py  2026_02_11_1210-0447645f4343_add_column_to_assoc_table.py
api_v1/: __init__.py
api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
