[project]
name = "microshop"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Igor Bondarenko",email = "bondarenko200021@mail.ru"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standatd] (>=0.40.0,<0.41.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
